--- a/public/stylesheets/ssrs-styles.css
+++ b/public/stylesheets/ssrs-styles.css
@@ -143,6 +143,9 @@ body {
   padding: 10px;
   font-size: 16px;
 }
+.form-control{
+	width:300px;
+}
 .form-signin .form-control:focus {
   z-index: 2;
 }
