--- a/target-eclipse/scala-2.11/classes/views/insert/insertCourse.scala.html
+++ b/target-eclipse/scala-2.11/classes/views/insert/insertCourse.scala.html
@@ -1,4 +1,3 @@
-@(aform: Form[InsertController.CourseForm])
 
 @import helper._
 
@@ -6,13 +5,18 @@
 	@insertDashboard(""){
 		<div id="container">
 
-        @form(routes.InsertController.insertCourse, 'class -> "smart-search-form") {
-        <h2 class="form-signin-heading">Insert a course</h2>
+        @form(action = routes.InsertController.insertCourse, 'class -> "smart-search-form") {
             <div id="contactInfo">
-              @inputText(aform("title"), 'class -> "form-control")
-              @inputText(aform("description"), 'class -> "form-control")
-              @inputText(aform("url"), 'class -> "form-control")
-              @inputText(aform("img-path"), 'class -> "form-control")
+            <p>Title:</p>
+              <input id="insertCourseTitle" name="insertCourseTitle" type="text" class="form-control"/>
+             <p>Course URL</p>
+              <input id="insertCourseURL" name="insertCourseURL" type="text" class="form-control"/>
+              <p>Image url</p>
+              <input id="insertCourseIMG" name="insertCourseIMG" type="text" class="form-control"/>
+              <p>Short description:</p>
+              <input id="insertCourseShortDescription" name="insertCourseShortDescription" type="text" class="form-control"/>
+              <p>Description</p>
+              <input id="insertCourseDescription" name="insertCourseDescription" type="text" class="form-control"/>
             </div>
             <input  class="btn btn-lg btn-primary btn-success" type="submit" value="Submit" />
         }
