--- a/target-eclipse/scala-2.11/classes/views/insert/insertItem.scala.html
+++ b/target-eclipse/scala-2.11/classes/views/insert/insertItem.scala.html
@@ -1,4 +1,4 @@
-@(aform: Form[InsertController.ItemForm])
+
 
 @import helper._
 
@@ -6,12 +6,17 @@
 	@insertDashboard(""){
 		<div id="container">
 
-        @form(routes.InsertController.insertItem, 'class -> "smart-search-form") {
+        @form(action = routes.InsertController.insertItem, 'class -> "smart-search-form") {
         <h2 class="form-signin-heading">Insert item</h2>
             <div id="contactInfo">
-              @inputText(aform("title"), 'class -> "form-control")
-              @inputText(aform("description"), 'class -> "form-control")
-
+            <p>Title:</p>
+             <input id="insertItemTitle" name="insertItemTitle" type="text" class="form-control"/>
+             <p>Short description:</p>
+             <input id="insertItemShortDescription" name="insertItemShortDescription" type="text" class="form-control"/>
+             <p>Description:</p>
+             <input id="insertItemDescription" name="insertItemDescription" type="text" class="form-control"/>
+             <p>Image url:</p>
+             <input id="insertItemIMG" name="insertItemIMG" type="text" class="form-control"/>
             </div>
             <input  class="btn btn-lg btn-primary btn-success" type="submit" value="Submit" />
         }
