--- a/target-eclipse/scala-2.11/classes/views/insert/insertVideo.scala.html
+++ b/target-eclipse/scala-2.11/classes/views/insert/insertVideo.scala.html
@@ -1,18 +1,22 @@
-@(aform: Form[InsertController.VideoForm])
-
 @import helper._
 
 @main("Insert video") {
 	@insertDashboard(""){
 		<div id="container">
 
-        @form(routes.InsertController.insertVideo, 'class -> "smart-search-form") {
+        @form(action = routes.InsertController.insertVideo, 'class -> "smart-search-form") {
         <h2 class="form-signin-heading">Insert a video</h2>
             <div id="contactInfo">
-              @inputText(aform("title"), 'class -> "form-control")
-              @inputText(aform("description"), 'class -> "form-control")
-              @inputText(aform("url"), 'class -> "form-control")
-              @inputText(aform("img-path"), 'class -> "form-control")
+            <p>Title:</p>
+              <input id="insertVideoTitle" name="insertVideoTitle" type="text"/>
+              <p>Short description:</p>
+              <input id="insertVideoShortDescription" name="insertVideoShortDescription" type="text"  class="form-control"/>
+              <p>Description</p>
+              <textarea id="insertVideoDescription" name="insertVideoDescription" class="form-control"></textarea>
+              <p>URL:</p>
+              <input id="insertVideoURL" name="insertVideoURL" type="text"  class="form-control"/>
+              <p>Image url</p>
+              <input id="insertVideoIMG" name="insertVideoIMG" type="text"  class="form-control"/>	
             </div>
             <input  class="btn btn-lg btn-primary btn-success" type="submit" value="Submit" />
         }
